PD-2579 fix overlapping text in 'Contact Search' autocomplete dropdown box

--- a/static/custom.css
+++ b/static/custom.css
@@ -623,7 +623,7 @@ h1 > small > a:hover {
     display:block;
     background-color: #DDDDDD;
 	padding: 8px 8px;
-	margin: 8px; 8px;
+	margin: 8px 8px;
 	border: 0 none;
 	border-radius: 3px;
 	cursor: pointer;
@@ -632,7 +632,7 @@ h1 > small > a:hover {
 .list-result {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
 }
 
 .sidebar {
